Add working User signup form with passing integration tests.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,9 +3,10 @@
     <%= link_to "Bingo on Rails", root_path , id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home",   root_path %></li>
-        <li><%= link_to "Help",   help_path %></li>
-        <li><%= link_to "About",  about_path %></li>
+        <li><%= link_to "Home",     root_path %></li>
+        <li><%= link_to "Help",     help_path %></li>
+        <li><%= link_to "About",    about_path %></li>
+        <li><%= link_to "Sign up",  signup_path %></li>
       </ul>
     </nav>
   </div>
