--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,11 @@
 	 <%= render 'layouts/header' %>
 
     <div class="container">
+      <%= render 'shared/flash_messages' %>
 		  <%= yield %>
       <%= render 'layouts/footer' %>
 	  </div>
 
+    <%= debug(params) if Rails.env.development? %>
 </body>
 </html>
