--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,9 @@
   </small>
   <nav>
     <ul>
-      <li><%= link_to "Sign up",  signup_path %></li>
+      <% unless logged_in? %>
+        <li><%= link_to "Sign up",  signup_path %></li>
+      <% end %>
       <li><%= link_to "Help",   help_path %></li>
       <li><%= link_to "About",  about_path %></li>
     </ul>
