--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -4,10 +4,14 @@
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
 		<%= form_for(:password_reset, url: password_resets_path) do |f| %>
-			<%= f.label :email %>
-			<%= f.email_field :email, class: 'form-control' %>
-		
-			<%= f.submit "Send Reset Link", class: "btn btn-primary" %>
+			<div class="form-group">
+				<%= f.label :email %>
+				<%= f.email_field :email, class: 'form-control' %>
+			</div>
+			<div class="form-group">
+				<%= f.submit "Send Reset Link", class: "btn btn-primary",
+												id: "resetPasswordSubmitBtn" %>
+			</div>
 		<% end %>
 	</div>
 </div>
