--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,20 +5,27 @@
 	<div class="col-md-6 col-md-offset-3">
 		<%= form_for(@user) do |f| %>
 			<%= render 'shared/error_messages' %>
-
-			<%= f.label :name %>
-			<%= f.text_field :name, class: 'form-control' %>
-
-			<%= f.label :email %>
-			<%= f.email_field :email, class: 'form-control' %>
-
-			<%= f.label :password %>
-			<%= f.password_field :password, class: 'form-control' %>
-
-			<%= f.label :password_confirmation, "Confirmation" %>
-			<%= f.password_field :password_confirmation, class: 'form-control' %>
-
-			<%= f.submit "Save changes", class: "btn btn-primary" %>
+			<div class="form-group">			
+				<%= f.label :name %>
+				<%= f.text_field :name, class: 'form-control' %>
+			</div>
+			<div class="form-group">
+				<%= f.label :email %>
+				<%= f.email_field :email, class: 'form-control' %>
+			</div>
+			<div class="form-group">
+				<%= f.label :password %>
+				<%= f.password_field :password, class: 'form-control' %>
+			</div>
+			<div class="form-group">
+				<%= f.label :password_confirmation, "Confirmation" %>
+				<%= f.password_field :password_confirmation, 
+					class: 'form-control' %>
+			</div>
+			<div class="form-group">
+				<%= f.submit "Save changes", class: "btn btn-primary", 
+					id: "userEditSubmitBtn" %>
+			</div>
 		<% end %>
 
 		<div class="gravatar_edit">
