--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,7 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home",     root_path %></li>
+        <li><%= link_to "New Game", new_game_path %></li>
         <li><%= link_to "Help",     help_path %></li>
         <li><%= link_to "About",    about_path %></li>
         <% if logged_in? %>
