--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <li><%= link_to "Help",     help_path %></li>
         <li><%= link_to "About",    about_path %></li>
         <% if logged_in? %>
-          <li><%= link_to "My Games", '#' %></li>
+          <li><%= link_to "My Games", bingo_games_path %></li>
 
           <% if current_user.admin == true %>
             <li><%= link_to "Users", users_path %></li>
