Add BingoGame model validations, basic form styling, pause to save functionality.
Validations cover form completeness and do not allow a call_cycle less than 2 seconds.

Pause to Save functionality requires the user to pause the game before saving to cut down the chances of players thinking they have a number called after the save was processed.

--- a/app/views/bingo_games/index.html.erb
+++ b/app/views/bingo_games/index.html.erb
@@ -11,7 +11,7 @@
 	</tr>
 	<% @bingo_games.each do |g| %>
 		<tr>
-			<td><%= g.updated_at.to_formatted_s(:long) %></td>
+			<td><%= g.updated_at.in_time_zone("Eastern Time (US & Canada)").strftime("%Y-%d-%m %I:%M %p %Z") %></td>
 			<td><%= pluralize(g.players.length, "Player") %></td>
 			<td><%= pluralize((75 - g.called_numbers.split(',').length), "Numbers") %> Left </td>
 			<td><%= link_to "Resume", g %></td>
