--- a/app/views/bingo_games/print_cards.html.erb
+++ b/app/views/bingo_games/print_cards.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-	<%= link_to "Start Game", @current_game %>
+	<%= link_to "Start Game", @current_game, class: "btn btn-primary" %>
 </div>
 
 <div class="row">
