--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer>
+<footer class="col-md-12">
   <small>
     <a href="#">Bingo on Rails</a>
     by <a href="http://github.com/stephenweigel/">Stephen Weigel</a>
