--- a/app/views/bingo_games/new.html.erb
+++ b/app/views/bingo_games/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "New Bingo Game") %>
-<h1>Set up a new game</h1>
+<h1>New Bingo Game</h1>
 
 <div class="col-md-6 col-md-offset-3">
 	<%= form_for @bingo_game  do |f| %>
